@@ -2,6 +2,7 @@ autoload ("require", "require");
 autoload ("provide", "require");
 autoload ("reverse", "arrayfuns");
 autoload ("shift", "arrayfuns");
+autoload ("rearrange", "arrayfuns");
 autoload ("struct_filter", "structfuns");
 autoload ("struct_combine", "structfuns");
 autoload ("struct_field_exists", "structfuns");
@@ -9,3 +10,4 @@ autoload ("readascii", "readascii");
 autoload ("glob", "glob");
 autoload ("sldb", "sldb");
 autoload ("print", "print");
+autoload ("list_sort", "listfuns");
