@@ -18,7 +18,7 @@ rearrange
   return from function.
 
   The algorithm used was derived from the DPPERM function, which is
-  part of the SLATEC packages.  See
+  part of the SLATEC package.  See
   `http://gams.nist.gov/cgi-bin/serve.cgi/Package/SLATEC'.
 
  SEE ALSO
