@@ -180,6 +180,9 @@ Changes since 2.2.4
     initialize the SIGINT handler.
 83. slsh/lib/arrayfuns.sl: New function: rearrange, which may be used
     to perform an in-place rearrangement of an array or list.
+84. slsh/lib/listfuns.sl: New file that includes various functions
+    dealing with lists and list-based data structures.  Currently this
+    includes list_sort and a heap object.
 
 {{{ Previous Versions
 
